# structloglint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  RULES.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  ast_walker.rs  config.rs  display.rs  expr_helpers.rs  lib.rs  main.rs  models.rs  runner.rs
src/rules/: case_style.rs  expr_helpers.rs  mod.rs  sl001.rs  sl002.rs  sl003.rs  sl004.rs  sl005.rs  sl006.rs  sl007.rs  sl008.rs  sl009.rs
test_data/: SL001.py  SL002.py  SL003.py  SL004.py  SL005.py  SL006.py  SL007.py  SL008.py  SL009.py  SL010.py  logging_example.py
tests/: integration.rs
tests/fixtures/clean_project/: app.py  pyproject.toml
tests/fixtures/custom_config/: app.py  pyproject.toml
tests/fixtures/default_config/: pyproject.toml
tests/fixtures/default_config/src/: app.py
tests/fixtures/file_exclusion/: pyproject.toml
tests/fixtures/file_exclusion/__pycache__/: cached.py
tests/fixtures/file_exclusion/migrations/: 001_init.py
tests/fixtures/file_exclusion/my_module/: app.py
tests/fixtures/file_exclusion/src/: app.py
tests/fixtures/file_exclusion_extend/: pyproject.toml
tests/fixtures/file_exclusion_override/: pyproject.toml
tests/fixtures/no_structlog/: app.py
tests/fixtures/rule_selection/: app.py  pyproject.toml
tests/fixtures/rule_severity/: app.py  pyproject.toml
tests/fixtures/standalone_config/: app.py  structloglint.toml
