[package]
name = "structloglint"
version = "0.1.1"
edition = "2024"
description = "A fast, opinionated linter for structlog log calls in Python"
license = "MIT"
repository = "https://github.com/maeldorne/structloglint"

[[bin]]
name = "structloglint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
rustpython-parser = "0.4.0"
inflections = "1.1.1"
walkdir = "2.5.0"
