[package]
name = "structloglint"
version = "0.3.0"
edition = "2024"
description = "A fast, opinionated linter for structlog log calls in Python"
license = "MIT"
repository = "https://github.com/maeldorne/structloglint"

[[bin]]
name = "structloglint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
rustpython-parser = "0.4.0"
inflections = "1.1.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2.5.0"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
